fix issue with prev button being overlapped with images from slider. Fixes to style and display image counter

--- a/www/Public/css/back.css
+++ b/www/Public/css/back.css
@@ -712,6 +712,18 @@ form {
   align-items: center;
   gap: 2rem;
 }
+.gallery--edit {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 5rem;
+  text-align: center;
+}
+.gallery--picture__edit {
+  width: 100%;
+  max-width: 20rem;
+}
 .gallery--link {
   color: black;
 }
