--- a/www/Public/css/front.css
+++ b/www/Public/css/front.css
@@ -487,13 +487,6 @@ form {
   transform: scale(0.95);
 }
 
-body {
-  font-family: Arial, sans-serif;
-  background: #f4f4f4;
-  margin: 0;
-  padding: 0;
-}
-
 .gallery {
   width: 80%;
   margin: 20px auto;
@@ -517,10 +510,12 @@ body {
   border-radius: 10px;
   display: flex;
   justify-content: center;
+  gap: 1rem;
   align-items: center;
 }
 .gallery .carousel .carousel--inner {
   display: flex;
+  width: 100%;
   transition: transform 0.5s ease-in-out;
 }
 .gallery .carousel .carousel--item {
@@ -546,9 +541,10 @@ body {
 .gallery .carousel .separator {
   height: 2px;
   background: #ddd;
-  margin: 10px 0;
+  margin: 5rem 0 0 0;
 }
 .gallery .carousel .carousel--control {
+  position: absolute;
   transform: translateY(-50%);
   background: rgba(0, 0, 0, 0.5);
   color: white;
@@ -562,10 +558,23 @@ body {
   background: rgba(0, 0, 0, 0.8);
 }
 .gallery .carousel .carousel--control.prev {
-  left: 1rem;
+  left: 20rem;
+  z-index: 1;
 }
 .gallery .carousel .carousel--control.next {
-  right: 1rem;
+  right: 20rem;
+  z-index: 1;
+}
+
+.carousel--counter {
+  position: absolute;
+  bottom: 4rem;
+  right: 50%;
+  transform: translateX(50%);
+  background: rgba(0, 0, 0, 0.5);
+  color: white;
+  padding: 5px 10px;
+  border-radius: 5px;
 }
 
 .modal {
