--- a/www/Public/scss/components/back/_gallery.scss
+++ b/www/Public/scss/components/back/_gallery.scss
@@ -3,6 +3,20 @@
   flex-direction: column;
   align-items: center;
   gap: 2rem;
+  &--edit {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 5rem;
+    text-align: center;
+  }
+  &--picture {
+    &__edit {
+      width: 100%;
+      max-width: 20rem;
+    }
+  }
   &--link {
     color: black;
   }
