--- a/www/Public/scss/components/front/_gallery.scss
+++ b/www/Public/scss/components/front/_gallery.scss
@@ -1,10 +1,3 @@
-body {
-  font-family: Arial, sans-serif;
-  background: #f4f4f4;
-  margin: 0;
-  padding: 0;
-}
-
 .gallery {
   width: 80%;
   margin: 20px auto;
@@ -31,10 +24,12 @@ body {
     border-radius: 10px;
     display: flex;
     justify-content: center;
+    gap: 1rem;
     align-items: center;
 
     .carousel--inner {
       display: flex;
+      width: 100%;
       transition: transform 0.5s ease-in-out;
     }
 
@@ -66,10 +61,11 @@ body {
     .separator {
       height: 2px;
       background: #ddd;
-      margin: 10px 0;
+      margin: 5rem 0 0 0;
     }
 
     .carousel--control {
+      position: absolute;
       transform: translateY(-50%);
       background: rgba(0, 0, 0, 0.5);
       color: white;
@@ -82,14 +78,28 @@ body {
         background: rgba(0, 0, 0, 0.8);
       }
       &.prev {
-        left: 1rem;
+        left: 20rem;
+        z-index: 1;
       }
       &.next {
-        right: 1rem;
+        right: 20rem;
+        z-index: 1;
       }
     }
   }
 }
+
+.carousel--counter {
+  position: absolute;
+  bottom: 4rem;
+  right: 50%;
+  transform: translateX(50%);
+  background: rgba(0, 0, 0, 0.5);
+  color: white;
+  padding: 5px 10px;
+  border-radius: 5px;
+}
+
 
 .modal {
   display: none;
